# pubchem-scrapper

./: LICENSE  README.md  constants.yml  example-exposures.csv  pyproject.toml  scrape.py
pubchem_scrapper/: guard.py  io.py  main.py  scrapping.py  utils.py
webdriver/: .gitignore
